# GraficosPorComputadora

Test/Glass Tracer/: CMakeLists.txt  GlassTracer.h  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  rtw_stb_image.h  sphere.h  vec3.h
Test/Glass Tracer/build_release_x86/: ALL_BUILD.vcxproj  CMakeCache.txt  GlassTracer.sln  GlassTracer.vcxproj  GlassTracer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
Test/Glass Tracer/build_release_x86/GlassTracer.dir/Release/: GlassTracer.exe.recipe
Test/Glass Tracer/build_release_x86/GlassTracer.dir/Release/GlassTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GlassTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Test/Glass Tracer/build_release_x86/Release/: image.ppm  scene.txt
Test/Glass Tracer/build_release_x86/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Test/Glass Tracer/build_release_x86/glm-master/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glm.sln
Test/Glass Tracer/build_release_x86/glm-master/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glm.vcxproj  glm.vcxproj.filters
Test/Glass Tracer/build_release_x86/glm-master/glm/Release/: glm.lib
(+24 files in other folders)
